# cpp-abstractions-project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
exercises/ch1/p1/: CMakeLists.txt  main.cpp
exercises/ch6/p1/: CMakeLists.txt  main.cpp
include/Domino/: domino.h
src/Domino/: domino.cpp
